// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> Spec Snapshots should render a filled and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #19191a;
  resize: vertical;
  border: 2px solid #e8eaed;
  background: #ffffff;
  opacity: 0.5;
}

.c1::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c1::-moz-placeholder {
  color: #9b9c9e;
}

.c1:-ms-input-placeholder {
  color: #9b9c9e;
}

.c1::placeholder {
  color: #9b9c9e;
}

.c1:hover {
  background: #e8eaed;
}

.c1:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1:hover {
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a filled textarea 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #19191a;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c1::-moz-placeholder {
  color: #9b9c9e;
}

.c1:-ms-input-placeholder {
  color: #9b9c9e;
}

.c1::placeholder {
  color: #9b9c9e;
}

.c1:hover {
  background: #e8eaed;
}

.c1:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea which is resizable 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #19191a;
  resize: vertical;
  border: 2px solid transparent;
}

.c1::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c1::-moz-placeholder {
  color: #9b9c9e;
}

.c1:-ms-input-placeholder {
  color: #9b9c9e;
}

.c1::placeholder {
  color: #9b9c9e;
}

.c1:hover {
  background: #e8eaed;
}

.c1:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render a textarea with an error 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #19191a;
  resize: vertical;
  background: #fff1f1;
  border: 2px solid transparent;
}

.c1::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c1::-moz-placeholder {
  color: #9b9c9e;
}

.c1:-ms-input-placeholder {
  color: #9b9c9e;
}

.c1::placeholder {
  color: #9b9c9e;
}

.c1:hover {
  background: #e8eaed;
}

.c1:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1:hover {
  background: #ffe1de;
}

.c1:focus {
  border: 2px solid #e9483a;
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      id="id"
      name=""
      rows="5"
    >
      Test
    </textarea>
  </div>
</div>
`;

exports[`<Textarea /> Spec Snapshots should render an empty and disabled textarea 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  width: 100%;
}

.c1 {
  width: inherit;
  background: #f3f4f6;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  text-overflow: ellipsis;
  border-radius: 6px;
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 4.5px 8px;
  outline: none;
  color: #19191a;
  resize: vertical;
  border: 2px solid #e8eaed;
  background: #ffffff;
  opacity: 0.5;
}

.c1::-webkit-input-placeholder {
  color: #9b9c9e;
}

.c1::-moz-placeholder {
  color: #9b9c9e;
}

.c1:-ms-input-placeholder {
  color: #9b9c9e;
}

.c1::placeholder {
  color: #9b9c9e;
}

.c1:hover {
  background: #e8eaed;
}

.c1:focus {
  border: 2px solid #367fee;
  background: #ffffff;
}

.c1:hover {
  background: #ffffff;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      rows="5"
    />
  </div>
</div>
`;
